2012-06-04 14:47  paddockd

	* [r340] ChangeLog, lib/libmad/s10intel/include/stdbool.h,
	  lib/libmad/s10sparc/include/stdbool.h,
	  lib/libmad/s9sparc/include/stdbool.h,
	  src/squeezeslave/squeezeslave.c: Define _Bool in stdbool.h if not
	  declared.
	  Increased revision to 340.

2012-06-04 14:43  paddockd

	* [r339] ChangeLog, src/squeezeslave/squeezeslave.c: Moved
	  variables to top of main() for gcc 2.95.3 support.
	  Increased revision to 339.

2012-06-04 14:16  paddockd

	* [r338] lib/portaudio-empeg/pa_common/pa_convert.c,
	  lib/portaudio-empeg/pa_unix_oss/pa_unix.h,
	  lib/portaudio/pa_common/pa_convert.c,
	  lib/portaudio/pa_unix_oss/pa_unix.h, src/slimaudio/slimaudio.c,
	  src/slimaudio/slimaudio.h, src/slimaudio/slimaudio_buffer.c,
	  src/slimaudio/slimaudio_buffer.h,
	  src/slimaudio/slimaudio_decoder.c,
	  src/slimaudio/slimaudio_decoder_mad.c,
	  src/slimaudio/slimaudio_decoder_vorbis.c,
	  src/slimaudio/slimaudio_output.c, src/slimproto/slimproto.c,
	  src/slimproto/slimproto.h, src/squeezeslave/empeg.c,
	  src/squeezeslave/interactive.c, src/squeezeslave/squeezeslave.c:
	  Removed all C++ // style comments.
	  Increased revision to 338.

2012-05-26 19:12  paddockd

	* [r337] ChangeLog, contrib/makefile.osx-lion-i64-display,
	  src/slimaudio/slimaudio_output.c,
	  src/squeezeslave/squeezeslave.c: Added OSX 10.7 64bit makefile to
	  contrib.
	  Increased revision to 337.

2012-05-21 17:24  paddockd

	* [r336] ChangeLog, contrib/makefile.linux24-gcc43-alsa-display,
	  contrib/makefile.linux26-mipsel-nofpu-oss-padev,
	  src/squeezeslave/squeezeslave.c: Add new contrib makefiles.
	  Increased revision to 336.

2012-05-21 15:30  paddockd

	* [r335] ChangeLog, src/slimaudio/slimaudio.h,
	  src/squeezeslave/squeezeslave.c: Fix for TREMOR_DECODER compile
	  error.
	  Increased revision to 335.

2012-05-21 14:27  paddockd

	* [r334] ChangeLog, contrib/makefile.linux24-nofpu-alsa-display,
	  contrib/makefile.linux26-mipsel-nofpu-alsa,